--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
   --email-color: rgba(153, 153, 153, 1);
   --filter-color: rgba(255, 255, 255, 0.2);
   --filter-form-color: rgba(255, 255, 255, 1);
-  --filter-fotm-hover: rgba(255, 255, 255, 0.8);
+  --filter-form-hover: rgba(255, 255, 255, 0.8);
   --modal-color: rgba(0, 0, 0, 0.4);
   --modal-background-color: #f8f7f4;
   --login-form-color: rgba(50, 50, 50, 1);
@@ -774,6 +774,7 @@ img {
   width: 293px;
   height: calc(100% + 60px);
   border-radius: 5px;
+  z-index: 1;
 }
 
 .goods-item:hover::after,
@@ -849,6 +850,8 @@ img {
   font-size: 16px;
   font-weight: 500;
   line-height: 22px;
+  position: relative;
+  z-index: 10;
 }
 
 .goods-item-name a:hover {
@@ -1407,7 +1410,7 @@ img {
   top: 0;
   width: 16px;
   height: 16px;
-  border: 4px solid var(--filter-fotm-hover);
+  border: 4px solid var(--filter-form-hover);
   border-radius: 50%;
 }
 
@@ -1423,7 +1426,7 @@ img {
   left: 1px;
   width: 8px;
   height: 8px;
-  background-color: var(--filter-fotm-hover);
+  background-color: var(--filter-form-hover);
   border-radius: 50%;
 }
 
@@ -1743,6 +1746,10 @@ img {
   line-height: 18px;
   font-weight: normal;
   text-decoration: underline solid var(--filter-color);
+}
+
+.htmlacademy-link:hover {
+  color: var(--header-phone-color);
 }
 
 /* Modal windows */
